--- a/projec5.html
+++ b/projec5.html
@@ -54,7 +54,7 @@
                     <div class="card4">
                         <p>Traditional & Modern Dress </p>
                        </div>
-                       <div class="card5">
+                       <!-- <div class="card5">
                         <p>Traditional & Modern Dress </p>
                        </div>
                        <div class="card6">
@@ -68,7 +68,7 @@
                        </div>
                        <div class="card9">
                         <p>Traditional & Modern Dress </p>
-                       </div>
+                       </div> -->
 
              <!--   <div class="card4">
                     <p>Traditional & Modern Dress </p>
